k8s/flag-service/flag-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: flag-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "25%"
      maxUnavailable: "25%"
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      serviceAccountName: sa-gke
      containers:
        - name: flag-service
          image: flag-service
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            periodSeconds: 10
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            periodSeconds: 10
            initialDelaySeconds: 15
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: 64m
              memory: 128Mi
            limits:
              cpu: 256m
              memory: 512Mi
