k8s/flag-service/flag-service-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag-ns
spec:
  type: ClusterIP
  selector:
    app: flag-service
  ports:
    - name: http
      port: 80
      targetPort: 8002
