k8s/flag-service/flag-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flag-netpol
  namespace: flag-ns
spec:
  podSelector:
    matchLabels:
      app: flag-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: evaluation-ns
      podSelector:
        matchLabels:
          app: evaluation-service
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring-ns
    ports:
    - protocol: TCP
      port: 8002
  egress:
  - {}
